--- a/HTML File.html
+++ b/HTML File.html
@@ -4,20 +4,74 @@
     <title>SMITTYWERBERMANJENSON</title>
 </head>
     <body style="background-color:darkorange;">
-        <h1 style="background-color:skyblue">Heading of size h1</h1>
+        <h1 style="background-color:green">Heading of size h1</h1>
             <p style="color:blue;" ><<b>  First paragraph.</b></p>
         <h2>Heading of size h2</h2>
             <p title="I'm a tooltip"> Mouse over this paragraph, to display the title attribute as a tooltip </p>
         <h3 style="font-family:verdana;" >Heading of size h3</h3>
             <a href="https://spongebob.fandom.com/wiki/Smitty_Werbenj%C3%A4germanjensen">Click here for Schmitty</a>
         <h4>Heading of size h4</h4>
-            <img src="img\schmitty.jpg" width="200" height="500" alt = "sperngberb with schmitty hat"/>
+            <img src="img\schmitty.jpg" width="150" height="150" alt = "sperngberb with schmitty hat"/>
         <hr>
         <h5>Heading of size h5</h5>
             <p> breaking <br> into <br> new <br> lines </p>
             <pre>the    pre tag      takes
             whitespace into         account </pre>
-        <h6>Heading of size h6</h6>
+        <h6 style="background-color:rgb(200, 99, 71);"> Heading of size h6</h6>
+            <p>the image below is a link, click on it</p>
+            <a href = "https://www.imdb.com/title/tt0707287/">
+                <img src = "img\uglybob.jpg" alt = "where is uglybob?;">
+            </a>
+        <h4>are you ready to sing?</h4>
+            <button onclick = "document.location= 'https://www.youtube.com/watch?v=r9L4AseD-aA' ">silly singing here</button>
+
+        <h4>click spongebob or patrick for jellies</h4>
+            <img src = "img\spongpat.jpg" alt = "spongebob and patrick should be here" usemap = "#workmap">
+            <map name = "workmap">
+                <area shape = "rect" coords = "61,59,123,114" alt = "spongebob"
+                      href = "https://www.imdb.com/title/tt0707296/mediaviewer/rm3956541184/?ref_=tt_md_2">
+                <area shape = "poly" coords = "61,59,123,114,147,23,138,64,124,20,134,80,132,115,159,123,189,
+                123,181,95,169,72,173,24,160,52" alt = "patrick"
+                      href = "https://www.pinterest.com/pin/669488300840385845/">
+            </map>
+
+    <!-- image map not working. works with defualt shape for whole image, but appears it can't find the coordinates for rect
+    should be format x1,y1,x2,y2 but ushing mac paintbrush, it gives me screen coordinates not image coordinates
+    *** i ended up using a free online HTML coordinate generator where you just upload the image and select the points and it
+    generates the coordiantes, even for compelx poly shapes -->
+
+        <h3>tables and lists</h3>
+        <table>
+            <tr>
+                <th>Season</th>
+                <th>Episode number</th>
+                <th>Episode name</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>1</td>
+                <td>Help Wanted</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>Bubblestand</td>
+            </tr>
+        </table>
+    <!-- tr = table row, th = table header, td = table data -->
+
+        <hr>
+
+        <div style="background-color:brown;color:white;padding:10px;">
+        <h4>MENU</h4>
+            <ol>
+                <li>krabby patty</li>
+                <li>double krabby patty</li>
+                <li>coral bits</li>
+                <li>kelp shake</li>
+            </ol>
+        </div>
+
     </body>
 </html>
 
@@ -39,6 +93,21 @@
 - other attributes that are CSS exist: font-size, text-align, etc.
 - syntax of HTML text formatting elements like <b> for bold and <strong> for italics is a little different where closing bracket
     ends with backslash first <b></b> instead of <b><b/>. many of these elements exist, small, mark, del, etc.
+- more unique colors produced with RBG integers
+- external CSS involves a <link> to the CSS file via the <head> tag in the HTML file where the
+    CSS file must be saved as a .css extension and contains no HTML but defines styles for backgrounds, headers, etc.
+
+
+CSS
+- oftene in external files, but can be 'inline' and 'internal' styles
+- inline CSS already used such as 'style' above where a single element affectedd
+- internal is for styling a single HTML page which we have also already done when the body background color was set
+- CSS, all kinds of styles. so many. borders, margins, whatever.
+
+- can link image to a website by including img tag in the <a> hyperlink tag space
+- document.location is part of the syntax for a button when will bring you to associated link. withouth
+    it, and the qutoes "''" it will populate a button that doesn't do anything
+- using an href and id attribute elsewhere in HTML file, can create a link that jumps to somwhere else on page. not inlcuded here
 
 // img was not displaying properly. The issue was that i had created the project incorrectly and didn't start was an
 // actual index.html file and just named it that myself. additionally, the image won't render properly if its not in a folder
